k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: digital-twin-service
spec:
  selector:
    app: digital-twin
  ports:
    - protocol: TCP
      port: 8765
      targetPort: 8765
  type: LoadBalancer
